Fixing some color contrast issues on form placeholders

--- a/assets/sass/3-components/forms.scss
+++ b/assets/sass/3-components/forms.scss
@@ -19,7 +19,7 @@ textarea, input, button{
   color: var(--color-prominent);
 
   &::placeholder{
-    color:var(--color-subtle-inverse);
+    color:var(--color-quiet-inverse);
   }
   &:focus, &:active{
     background: var(--background-primary);
